[tool.poetry]
name = "san-francisco"
version = "0.1.0"
description = ""
authors = ["Eduardo Camarena <eduardo@creditus.mx>"]
readme = "README.md"
packages = [{include = "san_francisco"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
typer = "^0.7.0"
progress = "^1.6"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
download_images = "san_francisco.image_downloader:main"
